# cookiecutter-cpp-project

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_name }}/: .clang-format  CMakeLists.txt  LICENSE  configuration.bat  {{ cookiecutter.project_name }}.sublime-project
{{ cookiecutter.project_name }}/app/{{ cookiecutter.project_name }}/: CMakeLists.txt
{{ cookiecutter.project_name }}/app/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}-cli/: CMakeLists.txt
{{ cookiecutter.project_name }}/app/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}-cli/include/: vkToolset.hpp
{{ cookiecutter.project_name }}/app/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}-cli/src/: dllmain.cpp  vApplication.cpp  vApplication.hpp  vIterators.hpp  vLogger.cpp  vLogger.hpp  vPhysicalDevice.cpp  vPhysicalDevice.hpp  vQueueFamily.cpp  vQueueFamily.hpp  vRanges.hpp  vUtilities.hpp  vkOfflineRenderer.cpp  {{ cookiecutter.project_name }}-cli.cpp
{{ cookiecutter.project_name }}/app/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}-cli/src/shaders/: vShaderVertexDebug.hpp  vShaders.cpp  vShaders.hpp
{{ cookiecutter.project_name }}/lib/: CMakeLists.txt
{{ cookiecutter.project_name }}/lib/{{ cookiecutter.project_name }}/: CMakeLists.txt
